News UAT/force-app/main/default/objects/Insertions_c__x/Insertions_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Insertions__c</externalName>
    <label>NRM Insertions</label>
    <pluralLabel>NRM Insertions</pluralLabel>
</CustomObject>