News UAT/force-app/main/default/objects/Insertions_c__x/fields/account_c__c.field-meta.xml
<CustomField>
    <fullName>account_c__c</fullName>
    <externalDeveloperName>account__c</externalDeveloperName>
    <label>Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>