News UAT/force-app/main/default/objects/Insertions_c__x/fields/Account_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_c__c</fullName>
    <externalDeveloperName>Account_Name__c</externalDeveloperName>
    <label>Account Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>