News UAT/force-app/main/default/objects/Insertions_c__x/fields/Account_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number_c__c</fullName>
    <externalDeveloperName>Account_Phone_Number__c</externalDeveloperName>
    <label>Account Phone Number</label>
    <type>Phone</type>
</CustomField>