News UAT/force-app/main/default/objects/Insertions_c__x/fields/Active_user_c__c.field-meta.xml
<CustomField>
    <fullName>Active_user_c__c</fullName>
    <externalDeveloperName>Active_user__c</externalDeveloperName>
    <label>Active user</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>