News UAT/force-app/main/default/objects/Insertions_c__x/fields/Ad_Image_c__c.field-meta.xml
<CustomField>
    <fullName>Ad_Image_c__c</fullName>
    <externalDeveloperName>Ad_Image__c</externalDeveloperName>
    <label>Ad Image</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>