News UAT/force-app/main/default/objects/Insertions_c__x/fields/Advert_Size_c__c.field-meta.xml
<CustomField>
    <fullName>Advert_Size_c__c</fullName>
    <externalDeveloperName>Advert_Size__c</externalDeveloperName>
    <label>Advert Size</label>
    <length>15</length>
    <type>Text</type>
</CustomField>