News UAT/force-app/main/default/objects/Insertions_c__x/fields/Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Amount_c__c</fullName>
    <externalDeveloperName>Amount__c</externalDeveloperName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>