News UAT/force-app/main/default/objects/Insertions_c__x/fields/Amount_Online_c__c.field-meta.xml
<CustomField>
    <fullName>Amount_Online_c__c</fullName>
    <externalDeveloperName>Amount_Online__c</externalDeveloperName>
    <label>Amount Online</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>