News UAT/force-app/main/default/objects/Insertions_c__x/fields/APN_Month_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Month_c__c</fullName>
    <externalDeveloperName>APN_Month__c</externalDeveloperName>
    <label>APN Month</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>