News UAT/force-app/main/default/objects/Insertions_c__x/fields/APN_Year_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Year_c__c</fullName>
    <externalDeveloperName>APN_Year__c</externalDeveloperName>
    <label>APN Year</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>