News UAT/force-app/main/default/objects/Insertions_c__x/fields/APNNZ_Month_c__c.field-meta.xml
<CustomField>
    <fullName>APNNZ_Month_c__c</fullName>
    <externalDeveloperName>APNNZ_Month__c</externalDeveloperName>
    <label>APNNZ Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>