News UAT/force-app/main/default/objects/Insertions_c__x/fields/APNNZ_Week_c__c.field-meta.xml
<CustomField>
    <fullName>APNNZ_Week_c__c</fullName>
    <externalDeveloperName>APNNZ_Week__c</externalDeveloperName>
    <label>APNNZ Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>