News UAT/force-app/main/default/objects/Insertions_c__x/fields/APNNZ_Year_c__c.field-meta.xml
<CustomField>
    <fullName>APNNZ_Year_c__c</fullName>
    <externalDeveloperName>APNNZ_Year__c</externalDeveloperName>
    <label>APNNZ Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>