News UAT/force-app/main/default/objects/Insertions_c__x/fields/Avdcto_c__c.field-meta.xml
<CustomField>
    <fullName>Avdcto_c__c</fullName>
    <externalDeveloperName>Avdcto__c</externalDeveloperName>
    <label>Avdcto</label>
    <length>2</length>
    <type>Text</type>
</CustomField>