News UAT/force-app/main/default/objects/Insertions_c__x/fields/Avdoco_c__c.field-meta.xml
<CustomField>
    <fullName>Avdoco_c__c</fullName>
    <externalDeveloperName>Avdoco__c</externalDeveloperName>
    <label>Avdoco</label>
    <length>12</length>
    <type>Text</type>
</CustomField>