News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_c__c</fullName>
    <externalDeveloperName>Booking__c</externalDeveloperName>
    <label>Booking</label>
    <length>18</length>
    <referenceTo>Booking_c__x</referenceTo>
    <relationshipLabel>NRM Insertions</relationshipLabel>
    <relationshipName>NRM_Insertions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>