News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_Created_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Created_Date_c__c</fullName>
    <externalDeveloperName>Booking_Created_Date__c</externalDeveloperName>
    <label>Booking Created Date</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>