News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_Last_Insertion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Last_Insertion_Date_c__c</fullName>
    <externalDeveloperName>Booking_Last_Insertion_Date__c</externalDeveloperName>
    <label>Booking Last Insertion Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>