News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_number_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_number_c__c</fullName>
    <externalDeveloperName>Booking_number__c</externalDeveloperName>
    <label>Booking number</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>