News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_Original_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Original_c__c</fullName>
    <externalDeveloperName>Booking_Original__c</externalDeveloperName>
    <label>Booking Original</label>
    <length>80</length>
    <type>Text</type>
</CustomField>