News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_Pillar_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Pillar_c__c</fullName>
    <externalDeveloperName>Booking_Pillar__c</externalDeveloperName>
    <label>Booking Pillar</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>