News UAT/force-app/main/default/objects/Insertions_c__x/fields/Booking_Rep_sf_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Rep_sf_ID_c__c</fullName>
    <externalDeveloperName>Booking_Rep_sf_ID__c</externalDeveloperName>
    <label>Booking Rep SF ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>