News UAT/force-app/main/default/objects/Insertions_c__x/fields/BookingRep_SF_ID_c__c.field-meta.xml
<CustomField>
    <fullName>BookingRep_SF_ID_c__c</fullName>
    <externalDeveloperName>BookingRep_SF_ID__c</externalDeveloperName>
    <label>Booking Rep</label>
    <length>18</length>
    <type>Text</type>
</CustomField>