News UAT/force-app/main/default/objects/Insertions_c__x/fields/Caption_c__c.field-meta.xml
<CustomField>
    <fullName>Caption_c__c</fullName>
    <externalDeveloperName>Caption__c</externalDeveloperName>
    <label>Caption</label>
    <type>TextArea</type>
</CustomField>