News UAT/force-app/main/default/objects/Insertions_c__x/fields/caption_trunc_30_c__c.field-meta.xml
<CustomField>
    <fullName>caption_trunc_30_c__c</fullName>
    <externalDeveloperName>caption_trunc_30__c</externalDeveloperName>
    <label>caption trunc 30</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>