News UAT/force-app/main/default/objects/Insertions_c__x/fields/Classification_c__c.field-meta.xml
<CustomField>
    <fullName>Classification_c__c</fullName>
    <externalDeveloperName>Classification__c</externalDeveloperName>
    <label>Booking Classification</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>