News UAT/force-app/main/default/objects/Insertions_c__x/fields/classification_definitions_c__c.field-meta.xml
<CustomField>
    <fullName>classification_definitions_c__c</fullName>
    <externalDeveloperName>classification_definitions__c</externalDeveloperName>
    <label>Classification definitions</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>