News UAT/force-app/main/default/objects/Insertions_c__x/fields/Classified_c__c.field-meta.xml
<CustomField>
    <fullName>Classified_c__c</fullName>
    <externalDeveloperName>Classified__c</externalDeveloperName>
    <label>Insertion Classification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>