News UAT/force-app/main/default/objects/Insertions_c__x/fields/Content_c__c.field-meta.xml
<CustomField>
    <fullName>Content_c__c</fullName>
    <externalDeveloperName>Content__c</externalDeveloperName>
    <label>Content</label>
    <length>3</length>
    <type>Text</type>
</CustomField>