News UAT/force-app/main/default/objects/Insertions_c__x/fields/Custcolcms_c__c.field-meta.xml
<CustomField>
    <fullName>Custcolcms_c__c</fullName>
    <externalDeveloperName>Custcolcms__c</externalDeveloperName>
    <label>Column cms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>