News UAT/force-app/main/default/objects/Insertions_c__x/fields/Deleted_c__c.field-meta.xml
<CustomField>
    <fullName>Deleted_c__c</fullName>
    <externalDeveloperName>Deleted__c</externalDeveloperName>
    <label>Deleted</label>
    <length>1</length>
    <type>Text</type>
</CustomField>