News UAT/force-app/main/default/objects/Insertions_c__x/fields/Fact_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Fact_Type_c__c</fullName>
    <externalDeveloperName>Fact_Type__c</externalDeveloperName>
    <label>Fact Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>