News UAT/force-app/main/default/objects/Insertions_c__x/fields/Filing_Groups_c__c.field-meta.xml
<CustomField>
    <fullName>Filing_Groups_c__c</fullName>
    <externalDeveloperName>Filing_Groups__c</externalDeveloperName>
    <label>Filing Groups</label>
    <length>18</length>
    <type>Text</type>
</CustomField>