News UAT/force-app/main/default/objects/Insertions_c__x/fields/Half_Year_c__c.field-meta.xml
<CustomField>
    <fullName>Half_Year_c__c</fullName>
    <externalDeveloperName>Half_Year__c</externalDeveloperName>
    <label>Half Year</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>