News UAT/force-app/main/default/objects/Insertions_c__x/fields/Industry_c__c.field-meta.xml
<CustomField>
    <fullName>Industry_c__c</fullName>
    <externalDeveloperName>Industry__c</externalDeveloperName>
    <label>Industry</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>