News UAT/force-app/main/default/objects/Insertions_c__x/fields/Insertion_c__c.field-meta.xml
<CustomField>
    <fullName>Insertion_c__c</fullName>
    <externalDeveloperName>Insertion__c</externalDeveloperName>
    <label>Insertion</label>
    <length>40</length>
    <type>Text</type>
</CustomField>