News UAT/force-app/main/default/objects/Insertions_c__x/fields/Insertion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Date_c__c</fullName>
    <externalDeveloperName>Insertion_Date__c</externalDeveloperName>
    <label>Insertion Date</label>
    <type>Date</type>
</CustomField>