News UAT/force-app/main/default/objects/Insertions_c__x/fields/Insertion_Number_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Number_NZ_c__c</fullName>
    <externalDeveloperName>Insertion_Number_NZ__c</externalDeveloperName>
    <label>Insertion Number</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>