News UAT/force-app/main/default/objects/Insertions_c__x/fields/Insertion_on_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Insertion_on_Hold_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Insertion_on_Hold__c</externalDeveloperName>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>