News UAT/force-app/main/default/objects/Insertions_c__x/fields/Insertion_Set_c__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Set_c__c</fullName>
    <externalDeveloperName>Insertion_Set__c</externalDeveloperName>
    <label>Insertion Set</label>
    <length>40</length>
    <type>Text</type>
</CustomField>