News UAT/force-app/main/default/objects/Insertions_c__x/fields/Is_Mismatch_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Mismatch_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Mismatch__c</externalDeveloperName>
    <label>Is Mismatch</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>