News UAT/force-app/main/default/objects/Insertions_c__x/fields/Is_PP_Insertion_c__c.field-meta.xml
<CustomField>
    <fullName>Is_PP_Insertion_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_PP_Insertion__c</externalDeveloperName>
    <label>Is PP Insertion</label>
    <type>Checkbox</type>
</CustomField>