News UAT/force-app/main/default/objects/Insertions_c__x/fields/local_National_c__c.field-meta.xml
<CustomField>
    <fullName>local_National_c__c</fullName>
    <externalDeveloperName>local_National__c</externalDeveloperName>
    <label>Local/National</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>