News UAT/force-app/main/default/objects/Insertions_c__x/fields/Month_c__c.field-meta.xml
<CustomField>
    <fullName>Month_c__c</fullName>
    <externalDeveloperName>Month__c</externalDeveloperName>
    <label>Month</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>