News UAT/force-app/main/default/objects/Insertions_c__x/fields/No_of_Insertions_c__c.field-meta.xml
<CustomField>
    <fullName>No_of_Insertions_c__c</fullName>
    <externalDeveloperName>No_of_Insertions__c</externalDeveloperName>
    <label>No. of Insertions</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>