News UAT/force-app/main/default/objects/Insertions_c__x/fields/Online_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Online_Count_c__c</fullName>
    <externalDeveloperName>Online_Count__c</externalDeveloperName>
    <label>Digital Bookings</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>