News UAT/force-app/main/default/objects/Insertions_c__x/fields/Package_c__c.field-meta.xml
<CustomField>
    <fullName>Package_c__c</fullName>
    <externalDeveloperName>Package__c</externalDeveloperName>
    <label>Package</label>
    <length>50</length>
    <type>Text</type>
</CustomField>