News UAT/force-app/main/default/objects/Insertions_c__x/fields/PAM_Last_Activity_Date_c__c.field-meta.xml
<CustomField>
    <fullName>PAM_Last_Activity_Date_c__c</fullName>
    <externalDeveloperName>PAM_Last_Activity_Date__c</externalDeveloperName>
    <label>PAM Last Activity Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>