News UAT/force-app/main/default/objects/Insertions_c__x/fields/Phone_No_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_No_c__c</fullName>
    <externalDeveloperName>Phone_No__c</externalDeveloperName>
    <label>Phone No</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>