News UAT/force-app/main/default/objects/Insertions_c__x/fields/Pillar_c__c.field-meta.xml
<CustomField>
    <fullName>Pillar_c__c</fullName>
    <externalDeveloperName>Pillar__c</externalDeveloperName>
    <label>Pillar</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>