News UAT/force-app/main/default/objects/Insertions_c__x/fields/Product_Mix_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Mix_c__c</fullName>
    <externalDeveloperName>Product_Mix__c</externalDeveloperName>
    <label>Product Mix</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>