News UAT/force-app/main/default/objects/Insertions_c__x/fields/Pub_Code1_c__c.field-meta.xml
<CustomField>
    <fullName>Pub_Code1_c__c</fullName>
    <externalDeveloperName>Pub_Code1__c</externalDeveloperName>
    <label>Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>