News UAT/force-app/main/default/objects/Insertions_c__x/fields/RecordType_avdcto_c__c.field-meta.xml
<CustomField>
    <fullName>RecordType_avdcto_c__c</fullName>
    <externalDeveloperName>RecordType_avdcto__c</externalDeveloperName>
    <label>Record Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>