News UAT/force-app/main/default/objects/Insertions_c__x/fields/Released_Advert_pdf_c__c.field-meta.xml
<CustomField>
    <fullName>Released_Advert_pdf_c__c</fullName>
    <externalDeveloperName>Released_Advert_pdf__c</externalDeveloperName>
    <label>Released Advert pdf</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>