News UAT/force-app/main/default/objects/Insertions_c__x/fields/Revenue_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category_c__c</fullName>
    <externalDeveloperName>Revenue_Category__c</externalDeveloperName>
    <label>Revenue Category</label>
    <length>18</length>
    <type>Text</type>
</CustomField>