News UAT/force-app/main/default/objects/Insertions_c__x/fields/Sales_Rep_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_c__c</fullName>
    <externalDeveloperName>Sales_Rep__c</externalDeveloperName>
    <label>Sales Rep</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>NRM Insertions</relationshipLabel>
    <relationshipName>NRM_Insertions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>