News UAT/force-app/main/default/objects/Insertions_c__x/fields/Sales_Rep_role_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_role_c__c</fullName>
    <externalDeveloperName>Sales_Rep_role__c</externalDeveloperName>
    <label>Sales Rep role</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>