News UAT/force-app/main/default/objects/Insertions_c__x/fields/Total_CM_s_c__c.field-meta.xml
<CustomField>
    <fullName>Total_CM_s_c__c</fullName>
    <externalDeveloperName>Total_CM_s__c</externalDeveloperName>
    <label>Total CM&#39;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>