News UAT/force-app/main/default/objects/Insertions_c__x/fields/Transaction_Account_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Account_Status_c__c</fullName>
    <externalDeveloperName>Transaction_Account_Status__c</externalDeveloperName>
    <label>Transaction Account Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>