News UAT/force-app/main/default/objects/Insertions_c__x/fields/Transaction_c__c.field-meta.xml
<CustomField>
    <fullName>Transaction_c__c</fullName>
    <externalDeveloperName>Transaction__c</externalDeveloperName>
    <label>Transaction</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>