News UAT/force-app/main/default/objects/Insertions_c__x/fields/Transaction_id_c__c.field-meta.xml
<CustomField>
    <fullName>Transaction_id_c__c</fullName>
    <externalDeveloperName>Transaction_id__c</externalDeveloperName>
    <label>Transaction id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>