News UAT/force-app/main/default/objects/Insertions_c__x/fields/Transaction_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_c__c</fullName>
    <externalDeveloperName>Transaction_Type__c</externalDeveloperName>
    <label>Transaction Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>