News UAT/force-app/main/default/objects/Insertions_c__x/fields/Transcation_ID_replica_c__c.field-meta.xml
<CustomField>
    <fullName>Transcation_ID_replica_c__c</fullName>
    <externalDeveloperName>Transcation_ID_replica__c</externalDeveloperName>
    <label>Transcation ID replica</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>