News UAT/force-app/main/default/objects/Insertions_c__x/fields/Yield_c__c.field-meta.xml
<CustomField>
    <fullName>Yield_c__c</fullName>
    <externalDeveloperName>Yield__c</externalDeveloperName>
    <label>Yield</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>