News UAT/force-app/main/default/objects/Insertions_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Insertion_c__c</columns>
    <columns>Account_Name_c__c</columns>
    <columns>Account_Number_c__c</columns>
    <columns>Booking_c__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Transaction_c__c</columns>
    <columns>Id</columns>
    <columns>DisplayUrl</columns>
    <columns>ExternalId</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>